// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Catalog Item Adaptive 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
  testID="catalog1"
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "minHeight": 205,
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/__fixtures__/assets/landscape-1.jpg",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
        testID="background-image-catalog1"
      />
      <BVLinearGradient
        colors={
          Array [
            0,
            1711276032,
            3003121664,
            4278190080,
          ]
        }
        endPoint={
          Object {
            "x": 0.5,
            "y": 1,
          }
        }
        locations={null}
        startPoint={
          Object {
            "x": 0.5,
            "y": 0,
          }
        }
        style={
          Array [
            Array [
              Object {
                "flex": 1,
              },
              Object {
                "height": 400.2,
                "minHeight": 215,
                "padding": 24,
              },
            ],
            undefined,
          ]
        }
        testID="gradient-catalog1"
      >
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "flex-end",
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight="22"
            bbWidth="22"
            color="#FFFFFF"
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                undefined,
                false,
                Object {
                  "flex": 0,
                  "height": 22,
                  "width": 22,
                },
              ]
            }
            testID="infinite-catalog1"
            vbHeight={46}
            vbWidth={46}
          >
            <RNSVGPath
              d="M10.6 15.3h2.5V11l9.2 6.4-9.2 6.5v-4.4h-2.8-.1c-3.3.2-5.8 2.9-5.8 6.1 0 3.5 2.5 6.1 5.9 6.1 3.9 0 7.1-3.4 9.8-6.1l2.8-2.8c3.5-3.5 7.2-7.4 12.8-7.4 5.9 0 10 4.3 10 10.3 0 5.5-4.4 10.3-10.5 10.3-2.8 0-5.2-1.2-7.3-2.8-.1-.1-.3-.2-.4-.3-.4-.4-.6-.9-.6-1.4 0-1.1.9-2 2-2 .4 0 .8.1 1.1.3.1 0 .1.1.2.1 1.5 1.1 3.1 1.9 5 1.9 3.5 0 6.1-2.8 6.1-6.1 0-3.5-2.5-6.1-5.9-6.1-3.9 0-7.1 3.4-9.8 6.1l-2.8 2.8c-3.5 3.5-7.2 7.4-12.8 7.4-5.8 0-10-4.3-10-10.3 0-2.6 1-5 2.7-6.9 1-1.1 2.2-1.9 3.6-2.5.1 0 .1-.1.2-.1 1.1-.5 2.4-.7 3.7-.8h.4z"
              fill={
                Array [
                  0,
                  1,
                  1,
                  1,
                  1,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                  "fillRule",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth="1"
              x={0}
              y={0}
            />
          </RNSVGSvgView>
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontWeight": "700",
                  "paddingTop": 8,
                },
                Object {
                  "fontSize": 22,
                },
              ]
            }
            testID="title-catalog1"
          >
            Predicting the future
          </Text>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "flex": 1,
                    "fontWeight": "400",
                    "paddingBottom": 16,
                    "paddingTop": 8,
                  },
                  Object {
                    "fontSize": 15,
                  },
                ]
              }
              testID="subtitle-catalog1"
            >
              Coorpacademy
            </Text>
          </View>
          <View
            style={
              Object {
                "borderRadius": 3,
                "overflow": "hidden",
              }
            }
            testID="progressBar-catalog1"
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                }
              }
              testID="progression-bar"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#00B0FF",
                    "borderBottomRightRadius": 1,
                    "borderTopRightRadius": 1,
                    "height": 2,
                    "width": "30%",
                  }
                }
                testID="progression-bar-3"
              />
            </View>
          </View>
        </View>
      </BVLinearGradient>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "marginVertical": 24,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "textAlign": "center",
              "textShadowColor": "rgba(0, 0, 0, 1)",
              "textShadowRadius": 2,
            },
            Object {
              "fontSize": 12,
              "letterSpacing": 2.25,
            },
          ]
        }
        testID="author-catalog1"
      >
        BREGUET CREATION
         CREATION
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots Catalog Item Adaptive/New/Certified/Coorp 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
  testID="catalog3"
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "minHeight": 205,
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/__fixtures__/assets/landscape-1.jpg",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
        testID="background-image-catalog3"
      />
      <BVLinearGradient
        colors={
          Array [
            0,
            1711276032,
            3003121664,
            4278190080,
          ]
        }
        endPoint={
          Object {
            "x": 0.5,
            "y": 1,
          }
        }
        locations={null}
        startPoint={
          Object {
            "x": 0.5,
            "y": 0,
          }
        }
        style={
          Array [
            Array [
              Object {
                "flex": 1,
              },
              Object {
                "height": 400.2,
                "minHeight": 215,
                "padding": 24,
              },
            ],
            undefined,
          ]
        }
        testID="gradient-catalog3"
      >
        <View
          style={
            Object {
              "position": "absolute",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderBottomEndRadius": 12,
                  "flex": 1,
                  "justifyContent": "center",
                  "paddingLeft": 8,
                  "paddingRight": 12,
                },
                Object {
                  "minHeight": 20,
                  "minWidth": 45,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  "New",
                  Object {
                    "fontSize": 12,
                    "fontWeight": "700",
                  },
                  Object {
                    "color": "#00B0FF",
                  },
                ]
              }
              testID="badge-catalog3"
            >
              New
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "flex-end",
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight="22"
            bbWidth="22"
            color="#FFFFFF"
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                undefined,
                false,
                Object {
                  "flex": 0,
                  "height": 22,
                  "width": 22,
                },
              ]
            }
            testID="infinite-catalog3"
            vbHeight={46}
            vbWidth={46}
          >
            <RNSVGPath
              d="M10.6 15.3h2.5V11l9.2 6.4-9.2 6.5v-4.4h-2.8-.1c-3.3.2-5.8 2.9-5.8 6.1 0 3.5 2.5 6.1 5.9 6.1 3.9 0 7.1-3.4 9.8-6.1l2.8-2.8c3.5-3.5 7.2-7.4 12.8-7.4 5.9 0 10 4.3 10 10.3 0 5.5-4.4 10.3-10.5 10.3-2.8 0-5.2-1.2-7.3-2.8-.1-.1-.3-.2-.4-.3-.4-.4-.6-.9-.6-1.4 0-1.1.9-2 2-2 .4 0 .8.1 1.1.3.1 0 .1.1.2.1 1.5 1.1 3.1 1.9 5 1.9 3.5 0 6.1-2.8 6.1-6.1 0-3.5-2.5-6.1-5.9-6.1-3.9 0-7.1 3.4-9.8 6.1l-2.8 2.8c-3.5 3.5-7.2 7.4-12.8 7.4-5.8 0-10-4.3-10-10.3 0-2.6 1-5 2.7-6.9 1-1.1 2.2-1.9 3.6-2.5.1 0 .1-.1.2-.1 1.1-.5 2.4-.7 3.7-.8h.4z"
              fill={
                Array [
                  0,
                  1,
                  1,
                  1,
                  1,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                  "fillRule",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth="1"
              x={0}
              y={0}
            />
          </RNSVGSvgView>
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontWeight": "700",
                  "paddingTop": 8,
                },
                Object {
                  "fontSize": 22,
                },
              ]
            }
            testID="title-catalog3"
          >
            Predicting the future
          </Text>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "flex": 1,
                    "fontWeight": "400",
                    "paddingBottom": 16,
                    "paddingTop": 8,
                  },
                  Object {
                    "fontSize": 15,
                  },
                ]
              }
              testID="subtitle-catalog3"
            >
              Coorpacademy
            </Text>
            <View
              style={
                Array [
                  Object {
                    "paddingLeft": 8,
                  },
                  Object {
                    "marginTop": -8,
                  },
                ]
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight="16"
                bbWidth="16"
                color="#FFFFFF"
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                    },
                    undefined,
                    false,
                    Object {
                      "flex": 0,
                      "height": 16,
                      "width": 16,
                    },
                  ]
                }
                testID="certified-catalog3"
                vbHeight={24}
                vbWidth={24}
              >
                <RNSVGPath
                  d="M0 .001h24v24H0z"
                  fill={null}
                  fillOpacity={1}
                  fillRule={1}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      0,
                      0,
                    ]
                  }
                  opacity={1}
                  originX={0}
                  originY={0}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  rotation={0}
                  scaleX={1}
                  scaleY={1}
                  skewX={0}
                  skewY={0}
                  stroke={null}
                  strokeDasharray={null}
                  strokeDashoffset={null}
                  strokeLinecap={0}
                  strokeLinejoin={0}
                  strokeMiterlimit={4}
                  strokeOpacity={1}
                  strokeWidth="1"
                  x={0}
                  y={0}
                />
                <RNSVGPath
                  d="M12.042 2c-5.523 0-10 4.477-10 10s4.477 10 10 10 10-4.477 10-10-4.478-10-10-10zm-.75 15.75l-5-3.75 1.5-2 3 2.25 5.25-7 2 1.5-6.75 9z"
                  fill={
                    Array [
                      0,
                      1,
                      1,
                      1,
                      1,
                    ]
                  }
                  fillOpacity={1}
                  fillRule={1}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      0,
                      0,
                    ]
                  }
                  opacity={1}
                  originX={0}
                  originY={0}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  rotation={0}
                  scaleX={1}
                  scaleY={1}
                  skewX={0}
                  skewY={0}
                  stroke={null}
                  strokeDasharray={null}
                  strokeDashoffset={null}
                  strokeLinecap={0}
                  strokeLinejoin={0}
                  strokeMiterlimit={4}
                  strokeOpacity={1}
                  strokeWidth="1"
                  x={0}
                  y={0}
                />
              </RNSVGSvgView>
            </View>
          </View>
          <View
            style={
              Object {
                "borderRadius": 3,
                "overflow": "hidden",
              }
            }
            testID="progressBar-catalog3"
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                }
              }
              testID="progression-bar"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#00B0FF",
                    "borderBottomRightRadius": 1,
                    "borderTopRightRadius": 1,
                    "height": 2,
                    "width": "30%",
                  }
                }
                testID="progression-bar-3"
              />
            </View>
          </View>
        </View>
      </BVLinearGradient>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "marginVertical": 24,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "textAlign": "center",
              "textShadowColor": "rgba(0, 0, 0, 1)",
              "textShadowRadius": 2,
            },
            Object {
              "fontSize": 12,
              "letterSpacing": 2.25,
            },
          ]
        }
        testID="author-catalog3"
      >
        COORP 
        <Text
          style={
            Object {
              "fontWeight": "700",
            }
          }
        >
          ORIGINAL
        </Text>
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots Catalog Item Adaptive/New/Certified/Custom 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
  testID="catalog4"
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "minHeight": 205,
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/__fixtures__/assets/landscape-1.jpg",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
        testID="background-image-catalog4"
      />
      <BVLinearGradient
        colors={
          Array [
            0,
            1711276032,
            3003121664,
            4278190080,
          ]
        }
        endPoint={
          Object {
            "x": 0.5,
            "y": 1,
          }
        }
        locations={null}
        startPoint={
          Object {
            "x": 0.5,
            "y": 0,
          }
        }
        style={
          Array [
            Array [
              Object {
                "flex": 1,
              },
              Object {
                "minHeight": 205,
                "padding": 16,
              },
            ],
            undefined,
          ]
        }
        testID="gradient-catalog4"
      >
        <View
          style={
            Object {
              "position": "absolute",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderBottomEndRadius": 12,
                  "flex": 1,
                  "justifyContent": "center",
                  "paddingLeft": 8,
                  "paddingRight": 12,
                },
                Object {
                  "minHeight": 17,
                  "minWidth": 40,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  "New",
                  Object {
                    "fontSize": 10,
                    "fontWeight": "700",
                  },
                  Object {
                    "color": "#00B0FF",
                  },
                ]
              }
              testID="badge-catalog4"
            >
              New
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "flex-end",
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight="16"
            bbWidth="16"
            color="#FFFFFF"
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                undefined,
                false,
                Object {
                  "flex": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
            testID="infinite-catalog4"
            vbHeight={46}
            vbWidth={46}
          >
            <RNSVGPath
              d="M10.6 15.3h2.5V11l9.2 6.4-9.2 6.5v-4.4h-2.8-.1c-3.3.2-5.8 2.9-5.8 6.1 0 3.5 2.5 6.1 5.9 6.1 3.9 0 7.1-3.4 9.8-6.1l2.8-2.8c3.5-3.5 7.2-7.4 12.8-7.4 5.9 0 10 4.3 10 10.3 0 5.5-4.4 10.3-10.5 10.3-2.8 0-5.2-1.2-7.3-2.8-.1-.1-.3-.2-.4-.3-.4-.4-.6-.9-.6-1.4 0-1.1.9-2 2-2 .4 0 .8.1 1.1.3.1 0 .1.1.2.1 1.5 1.1 3.1 1.9 5 1.9 3.5 0 6.1-2.8 6.1-6.1 0-3.5-2.5-6.1-5.9-6.1-3.9 0-7.1 3.4-9.8 6.1l-2.8 2.8c-3.5 3.5-7.2 7.4-12.8 7.4-5.8 0-10-4.3-10-10.3 0-2.6 1-5 2.7-6.9 1-1.1 2.2-1.9 3.6-2.5.1 0 .1-.1.2-.1 1.1-.5 2.4-.7 3.7-.8h.4z"
              fill={
                Array [
                  0,
                  1,
                  1,
                  1,
                  1,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                  "fillRule",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth="1"
              x={0}
              y={0}
            />
          </RNSVGSvgView>
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontWeight": "700",
                  "paddingTop": 8,
                },
                Object {
                  "fontSize": 15,
                },
              ]
            }
            testID="title-catalog4"
          >
            Predicting the future
          </Text>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "flex": 1,
                    "fontWeight": "400",
                    "paddingBottom": 16,
                    "paddingTop": 8,
                  },
                  Object {
                    "fontSize": 12,
                  },
                ]
              }
              testID="subtitle-catalog4"
            >
              Coorpacademy
            </Text>
            <View
              style={
                Array [
                  Object {
                    "paddingLeft": 8,
                  },
                  Object {
                    "marginTop": -7,
                  },
                ]
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight="14"
                bbWidth="14"
                color="#FFFFFF"
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                    },
                    undefined,
                    false,
                    Object {
                      "flex": 0,
                      "height": 14,
                      "width": 14,
                    },
                  ]
                }
                testID="certified-catalog4"
                vbHeight={24}
                vbWidth={24}
              >
                <RNSVGPath
                  d="M0 .001h24v24H0z"
                  fill={null}
                  fillOpacity={1}
                  fillRule={1}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      0,
                      0,
                    ]
                  }
                  opacity={1}
                  originX={0}
                  originY={0}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  rotation={0}
                  scaleX={1}
                  scaleY={1}
                  skewX={0}
                  skewY={0}
                  stroke={null}
                  strokeDasharray={null}
                  strokeDashoffset={null}
                  strokeLinecap={0}
                  strokeLinejoin={0}
                  strokeMiterlimit={4}
                  strokeOpacity={1}
                  strokeWidth="1"
                  x={0}
                  y={0}
                />
                <RNSVGPath
                  d="M12.042 2c-5.523 0-10 4.477-10 10s4.477 10 10 10 10-4.477 10-10-4.478-10-10-10zm-.75 15.75l-5-3.75 1.5-2 3 2.25 5.25-7 2 1.5-6.75 9z"
                  fill={
                    Array [
                      0,
                      1,
                      1,
                      1,
                      1,
                    ]
                  }
                  fillOpacity={1}
                  fillRule={1}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      0,
                      0,
                    ]
                  }
                  opacity={1}
                  originX={0}
                  originY={0}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  rotation={0}
                  scaleX={1}
                  scaleY={1}
                  skewX={0}
                  skewY={0}
                  stroke={null}
                  strokeDasharray={null}
                  strokeDashoffset={null}
                  strokeLinecap={0}
                  strokeLinejoin={0}
                  strokeMiterlimit={4}
                  strokeOpacity={1}
                  strokeWidth="1"
                  x={0}
                  y={0}
                />
              </RNSVGSvgView>
            </View>
          </View>
          <View
            style={
              Object {
                "borderRadius": 3,
                "overflow": "hidden",
              }
            }
            testID="progressBar-catalog4"
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                }
              }
              testID="progression-bar"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#00B0FF",
                    "borderBottomRightRadius": 1,
                    "borderTopRightRadius": 1,
                    "height": 2,
                    "width": "30%",
                  }
                }
                testID="progression-bar-3"
              />
            </View>
          </View>
        </View>
      </BVLinearGradient>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "marginVertical": 24,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "textAlign": "center",
              "textShadowColor": "rgba(0, 0, 0, 1)",
              "textShadowRadius": 2,
            },
            Object {
              "fontSize": 10,
              "letterSpacing": 1.88,
            },
          ]
        }
        testID="author-catalog4"
      />
    </View>
  </View>
</View>
`;

exports[`Storyshots Catalog Item Microlearning 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
  testID="catalog4"
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "minHeight": 205,
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/__fixtures__/assets/landscape-1.jpg",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
        testID="background-image-catalog4"
      />
      <BVLinearGradient
        colors={
          Array [
            0,
            1711276032,
            3003121664,
            4278190080,
          ]
        }
        endPoint={
          Object {
            "x": 0.5,
            "y": 1,
          }
        }
        locations={null}
        startPoint={
          Object {
            "x": 0.5,
            "y": 0,
          }
        }
        style={
          Array [
            Array [
              Object {
                "flex": 1,
              },
              Object {
                "minHeight": 205,
                "padding": 16,
              },
            ],
            undefined,
          ]
        }
        testID="gradient-catalog4"
      >
        <View
          style={
            Object {
              "position": "absolute",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderBottomEndRadius": 12,
                  "flex": 1,
                  "justifyContent": "center",
                  "paddingLeft": 8,
                  "paddingRight": 12,
                },
                Object {
                  "minHeight": 17,
                  "minWidth": 40,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  "New",
                  Object {
                    "fontSize": 10,
                    "fontWeight": "700",
                  },
                  Object {
                    "color": "#00B0FF",
                  },
                ]
              }
              testID="badge-catalog4"
            >
              New
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "flex-end",
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight="16"
            bbWidth="16"
            color="#FFFFFF"
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                undefined,
                false,
                Object {
                  "flex": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
            testID="infinite-catalog4"
            vbHeight={46}
            vbWidth={46}
          >
            <RNSVGPath
              d="M10.6 15.3h2.5V11l9.2 6.4-9.2 6.5v-4.4h-2.8-.1c-3.3.2-5.8 2.9-5.8 6.1 0 3.5 2.5 6.1 5.9 6.1 3.9 0 7.1-3.4 9.8-6.1l2.8-2.8c3.5-3.5 7.2-7.4 12.8-7.4 5.9 0 10 4.3 10 10.3 0 5.5-4.4 10.3-10.5 10.3-2.8 0-5.2-1.2-7.3-2.8-.1-.1-.3-.2-.4-.3-.4-.4-.6-.9-.6-1.4 0-1.1.9-2 2-2 .4 0 .8.1 1.1.3.1 0 .1.1.2.1 1.5 1.1 3.1 1.9 5 1.9 3.5 0 6.1-2.8 6.1-6.1 0-3.5-2.5-6.1-5.9-6.1-3.9 0-7.1 3.4-9.8 6.1l-2.8 2.8c-3.5 3.5-7.2 7.4-12.8 7.4-5.8 0-10-4.3-10-10.3 0-2.6 1-5 2.7-6.9 1-1.1 2.2-1.9 3.6-2.5.1 0 .1-.1.2-.1 1.1-.5 2.4-.7 3.7-.8h.4z"
              fill={
                Array [
                  0,
                  1,
                  1,
                  1,
                  1,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                  "fillRule",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth="1"
              x={0}
              y={0}
            />
          </RNSVGSvgView>
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight="16"
            bbWidth="16"
            color="#FFFFFF"
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                undefined,
                false,
                Object {
                  "flex": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
            testID="infinite-catalog4"
            vbHeight={25}
            vbWidth={25}
          >
            <RNSVGGroup
              fill={
                Array [
                  0,
                  1,
                  1,
                  1,
                  1,
                ]
              }
              fillOpacity={1}
              fillRule={0}
              font={Object {}}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                  "fillRule",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth="1"
              x={0}
              y={0}
            >
              <RNSVGPath
                d="M18.281 11.742l-2.104 2.627a1.858 1.858 0 1 1-1.575-1.582l2.627-2.104c.699-.563 1.616.353 1.052 1.051v.008zM10.683 18.237a.951.951 0 0 0-.952-.951h-4c-1.267 0-1.267 1.902 0 1.902H9.73a.95.95 0 0 0 .951-.95l.003-.001z"
                fill={
                  Array [
                    0,
                    0,
                    0,
                    0,
                    1,
                  ]
                }
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={Array []}
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth="1"
                x={0}
                y={0}
              />
              <RNSVGPath
                d="M22.704 8.025c.2-.192.332-.446.373-.72a1.196 1.196 0 0 0-1.338-1.34 1.255 1.255 0 0 0-.72.375l-.986.986a9.216 9.216 0 0 0-4.487-1.88v-.895h.858a1.23 1.23 0 0 0 1.242-1.074 1.196 1.196 0 0 0-1.18-1.312h-4.164a1.23 1.23 0 0 0-1.242 1.073 1.194 1.194 0 0 0 1.189 1.313h.921v.893a9.284 9.284 0 0 0-4.267 1.717c-1.188.951.142 2.765 1.406 1.918a6.87 6.87 0 1 1 .424 11.352 1.19 1.19 0 0 0-1.547.23c-.463.55-.338 1.38.265 1.77a9.178 9.178 0 0 0 6.325 1.33 9.28 9.28 0 0 0 7.829-9.035 9.15 9.15 0 0 0-1.893-5.706l.992-.995z"
                fill={
                  Array [
                    0,
                    0,
                    0,
                    0,
                    1,
                  ]
                }
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={Array []}
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth="1"
                x={0}
                y={0}
              />
              <RNSVGPath
                d="M9.73 12.4c1.267 0 1.267-1.902 0-1.902H2.45c-1.267 0-1.267 1.902 0 1.902h7.28zM9.73 13.89H4.24c-1.268 0-1.268 1.901 0 1.901h5.49c1.267 0 1.267-1.902 0-1.902z"
                fill={
                  Array [
                    0,
                    0,
                    0,
                    0,
                    1,
                  ]
                }
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={Array []}
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth="1"
                x={0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontWeight": "700",
                  "paddingTop": 8,
                },
                Object {
                  "fontSize": 15,
                },
              ]
            }
            testID="title-catalog4"
          >
            Predicting the future
          </Text>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "flex": 1,
                    "fontWeight": "400",
                    "paddingBottom": 16,
                    "paddingTop": 8,
                  },
                  Object {
                    "fontSize": 12,
                  },
                ]
              }
              testID="subtitle-catalog4"
            >
              Coorpacademy
            </Text>
            <View
              style={
                Array [
                  Object {
                    "paddingLeft": 8,
                  },
                  Object {
                    "marginTop": -7,
                  },
                ]
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight="14"
                bbWidth="14"
                color="#FFFFFF"
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                    },
                    undefined,
                    false,
                    Object {
                      "flex": 0,
                      "height": 14,
                      "width": 14,
                    },
                  ]
                }
                testID="certified-catalog4"
                vbHeight={24}
                vbWidth={24}
              >
                <RNSVGPath
                  d="M0 .001h24v24H0z"
                  fill={null}
                  fillOpacity={1}
                  fillRule={1}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      0,
                      0,
                    ]
                  }
                  opacity={1}
                  originX={0}
                  originY={0}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  rotation={0}
                  scaleX={1}
                  scaleY={1}
                  skewX={0}
                  skewY={0}
                  stroke={null}
                  strokeDasharray={null}
                  strokeDashoffset={null}
                  strokeLinecap={0}
                  strokeLinejoin={0}
                  strokeMiterlimit={4}
                  strokeOpacity={1}
                  strokeWidth="1"
                  x={0}
                  y={0}
                />
                <RNSVGPath
                  d="M12.042 2c-5.523 0-10 4.477-10 10s4.477 10 10 10 10-4.477 10-10-4.478-10-10-10zm-.75 15.75l-5-3.75 1.5-2 3 2.25 5.25-7 2 1.5-6.75 9z"
                  fill={
                    Array [
                      0,
                      1,
                      1,
                      1,
                      1,
                    ]
                  }
                  fillOpacity={1}
                  fillRule={1}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      0,
                      0,
                    ]
                  }
                  opacity={1}
                  originX={0}
                  originY={0}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  rotation={0}
                  scaleX={1}
                  scaleY={1}
                  skewX={0}
                  skewY={0}
                  stroke={null}
                  strokeDasharray={null}
                  strokeDashoffset={null}
                  strokeLinecap={0}
                  strokeLinejoin={0}
                  strokeMiterlimit={4}
                  strokeOpacity={1}
                  strokeWidth="1"
                  x={0}
                  y={0}
                />
              </RNSVGSvgView>
            </View>
          </View>
          <View
            style={
              Object {
                "borderRadius": 3,
                "overflow": "hidden",
              }
            }
            testID="progressBar-catalog4"
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                }
              }
              testID="progression-bar"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#00B0FF",
                    "borderBottomRightRadius": 1,
                    "borderTopRightRadius": 1,
                    "height": 2,
                    "width": "30%",
                  }
                }
                testID="progression-bar-3"
              />
            </View>
          </View>
        </View>
      </BVLinearGradient>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "marginVertical": 24,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "textAlign": "center",
              "textShadowColor": "rgba(0, 0, 0, 1)",
              "textShadowRadius": 2,
            },
            Object {
              "fontSize": 10,
              "letterSpacing": 1.88,
            },
          ]
        }
        testID="author-catalog4"
      />
    </View>
  </View>
</View>
`;

exports[`Storyshots Catalog Item New 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
  testID="catalog2"
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "minHeight": 205,
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/__fixtures__/assets/landscape-1.jpg",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
        testID="background-image-catalog2"
      />
      <BVLinearGradient
        colors={
          Array [
            0,
            1711276032,
            3003121664,
            4278190080,
          ]
        }
        endPoint={
          Object {
            "x": 0.5,
            "y": 1,
          }
        }
        locations={null}
        startPoint={
          Object {
            "x": 0.5,
            "y": 0,
          }
        }
        style={
          Array [
            Array [
              Object {
                "flex": 1,
              },
              Object {
                "height": 400.2,
                "minHeight": 215,
                "padding": 24,
              },
            ],
            undefined,
          ]
        }
        testID="gradient-catalog2"
      >
        <View
          style={
            Object {
              "position": "absolute",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderBottomEndRadius": 12,
                  "flex": 1,
                  "justifyContent": "center",
                  "paddingLeft": 8,
                  "paddingRight": 12,
                },
                Object {
                  "minHeight": 20,
                  "minWidth": 45,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  "New",
                  Object {
                    "fontSize": 12,
                    "fontWeight": "700",
                  },
                  Object {
                    "color": "#00B0FF",
                  },
                ]
              }
              testID="badge-catalog2"
            >
              New
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "flex-end",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontWeight": "700",
                  "paddingTop": 8,
                },
                Object {
                  "fontSize": 22,
                },
              ]
            }
            testID="title-catalog2"
          >
            Predicting the future
          </Text>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "flex": 1,
                    "fontWeight": "400",
                    "paddingBottom": 16,
                    "paddingTop": 8,
                  },
                  Object {
                    "fontSize": 15,
                  },
                ]
              }
              testID="subtitle-catalog2"
            >
              Coorpacademy
            </Text>
          </View>
          <View
            style={
              Object {
                "borderRadius": 3,
                "overflow": "hidden",
              }
            }
            testID="progressBar-catalog2"
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                }
              }
              testID="progression-bar"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#00B0FF",
                    "borderBottomRightRadius": 1,
                    "borderTopRightRadius": 1,
                    "height": 2,
                    "width": "30%",
                  }
                }
                testID="progression-bar-3"
              />
            </View>
          </View>
        </View>
      </BVLinearGradient>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "marginVertical": 24,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "textAlign": "center",
              "textShadowColor": "rgba(0, 0, 0, 1)",
              "textShadowRadius": 2,
            },
            Object {
              "fontSize": 12,
              "letterSpacing": 2.25,
            },
          ]
        }
        testID="author-catalog2"
      >
        BREGUET CREATION
         CREATION
      </Text>
    </View>
  </View>
</View>
`;
